fix(front/checker): prevent cropping of single habit card

--- a/projects/front/src/widgets/boards-list/boards-list.component.scss
+++ b/projects/front/src/widgets/boards-list/boards-list.component.scss
@@ -19,6 +19,7 @@
 
 .board {
   margin-left: 0.5rem;
+  margin-block: 6.4px;
   height: 178px;
   width: 300px;
   background-color: var(--mat-sys-surface-container-lowest);
@@ -27,10 +28,10 @@
   border: none;
   box-shadow: var(--shadow-md);
   transition: all 0.3s ease;
-  margin-top: 12.8px;
 
   .board-card-content {
     padding: 0.8rem 1rem;
+    padding-top: 0.2rem;
     display: flex;
     flex-flow: column nowrap;
     align-items: flex-start;
